Publish data and other files

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,4 +8,14 @@ editor_options:
   chunk_output_type: console
 ---
 
-Welcome to my research website.
+# myproject Ricardo
+
+Hi! This is *myproject* webpage
+
+In here:
+
+* I'll work
+* ...
+* and I think that's it
+
+
